syntax = "proto3";

package helloworld;

option go_package = "./grpc/v1/helloword;helloword";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}